[gd_scene load_steps=16 format=3 uid="uid://b5u2trpptd0nk"]

[ext_resource type="Script" path="res://player/player.gd" id="1_4i6re"]
[ext_resource type="Texture2D" uid="uid://v5habofwvqhu" path="res://images/crosshair.png" id="2_yl2ns"]
[ext_resource type="PackedScene" uid="uid://docwyyeakbukv" path="res://player/gun/gun.tscn" id="3_2fn1v"]
[ext_resource type="AudioStream" uid="uid://p0amx1avpykq" path="res://audio/shoot.wav" id="3_yyoil"]
[ext_resource type="AudioStream" uid="uid://ccsn5r7oho6bq" path="res://audio/170272__knova__gun-click.wav" id="5_5wqd5"]
[ext_resource type="PackedScene" uid="uid://b86c6rfryl2tq" path="res://player/gun/laser.tscn" id="6_4alui"]
[ext_resource type="AudioStream" uid="uid://cgc61awit5ask" path="res://audio/reload.wav" id="7_65oj5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_orege"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u657t"]
transparency = 1
no_depth_test = true
albedo_texture = ExtResource("2_yl2ns")

[sub_resource type="QuadMesh" id="QuadMesh_73ei6"]
material = SubResource("StandardMaterial3D_u657t")

[sub_resource type="Animation" id="Animation_w8twu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_71m3k"]
resource_name = "reload"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 0.9, 1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 0, 0), Vector3(12.5664, 0, 0), Vector3(18.8496, 0, 0), Vector3(25.1327, 0, 0), Vector3(32.0442, 0, 0), Vector3(32.0442, 0, 0), Vector3(31.4159, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ap8yj"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.174533, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4xbg"]
_data = {
"RESET": SubResource("Animation_w8twu"),
"reload": SubResource("Animation_71m3k"),
"shoot": SubResource("Animation_ap8yj")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_40kw8"]

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_4i6re")

[node name="collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_orege")

[node name="cam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.569782, 0)

[node name="laser" parent="cam" instance=ExtResource("6_4alui")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 70, 0.888768, -0.342042, -1.58673)
visible = false

[node name="crosshair" type="MeshInstance3D" parent="cam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.894645)
mesh = SubResource("QuadMesh_73ei6")

[node name="hitscan" type="RayCast3D" parent="cam/crosshair"]
transform = Transform3D(4.411, 0, 0, 0, -8.74228e-06, -4.411, 0, 200, -1.92811e-07, 0, 0, 0.495822)

[node name="gun" parent="cam" instance=ExtResource("3_2fn1v")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.888768, -0.569782, -0.804036)

[node name="shoot" type="AudioStreamPlayer" parent="cam/gun"]
stream = ExtResource("3_yyoil")
pitch_scale = 0.8

[node name="click" type="AudioStreamPlayer" parent="cam/gun"]
stream = ExtResource("5_5wqd5")

[node name="reload" type="AudioStreamPlayer" parent="cam/gun"]
stream = ExtResource("7_65oj5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="cam/gun"]
libraries = {
"": SubResource("AnimationLibrary_t4xbg")
}

[node name="laser_timer" type="Timer" parent="cam/gun"]
wait_time = 0.05

[node name="kill_box" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="kill_box"]
shape = SubResource("CapsuleShape3D_40kw8")

[connection signal="timeout" from="cam/gun/laser_timer" to="." method="_on_laser_timer_timeout"]
[connection signal="body_entered" from="kill_box" to="." method="_on_kill_box_body_entered"]
